WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282585
video-rvfc/request-video-frame-callback-repeating.html WPT fails
https://bugs.webkit.org/show_bug.cgi?id=282585
Summary
video-rvfc/request-video-frame-callback-repeating.html WPT fails
Tim Nguyen (:ntim)
Reported
2024-11-04 19:00:18 PST
https://wpt.fyi/results/video-rvfc/request-video-frame-callback-repeating.html?label=master&label=experimental&aligned&view=interop&q=label%3Ainterop-2024-video-rvfc
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-04 19:00:41 PST
<
rdar://problem/139251513
>
Jer Noble
Comment 2
2024-11-04 20:08:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36175
EWS
Comment 3
2024-11-11 13:22:51 PST
Committed
286451@main
(60289bcb5d45): <
https://commits.webkit.org/286451@main
> Reviewed commits have been landed. Closing PR #36175 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug