video-rvfc/request-video-frame-callback-repeating.html WPT fails https://bugs.webkit.org/show_bug.cgi?id=282585 rdar://139251513

Reviewed by Jean-Yves Avenard.

Implement both `expectedDisplayTime` and `mediaTime` properties of
VideoFrameMetadata in MediaPlayerPrivateWebM. To do so, modify
VideoMediaSampleRenderer::copyDisplayedPixelBuffer() to return
a combination of a pixel buffer and that buffer's presentation time.

* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::updateLastPixelBuffer):
(WebCore::MediaPlayerPrivateWebM::checkNewVideoFrameMetadata):
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.h:
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::copyDisplayedPixelBuffer):

Canonical link: https://commits.webkit.org/286451@main